--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -90,6 +90,13 @@
 	<summary class="h2">Tematy tekstów</summary>
 
 	<ul class="sample-topics">
+		<li>bieżące sprawy</li>
+		<li>folklor/szamanizm</li>
+		<li>militaria (Polska-Korea)</li>
+		<li>motoryzacja</li>
+		<li>niska dzietność</li>
+		<li>opieka psychologiczna/psychiatryczna</li>
+		<li>popkultura</li>
 	</ul>
 </details>
 
@@ -126,13 +133,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">3</th>
-				<td rowspan="2">18 października</td>
-				<td class="schedule-presentation">Praca domowa 1</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">3</th>
+				<td>18 października</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -154,44 +156,39 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">5</th>
-				<td rowspan="2">15 listopada</td>
+				<th scope="row">5</th>
+				<td>15 listopada</td>
+				<td class="schedule-lecture">Zajęcia</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row">6</th>
+				<td>22 listopada</td>
+				<td class="schedule-lecture">Zajęcia</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<th scope="row" rowspan="3">7</th>
+				<td rowspan="3">29 listopada 2024</td>
+				<td class="schedule-presentation">Praca domowa 1</td>
+				<td class="schedule-presentation">Kinga Majcherczyk</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
 				<td class="schedule-presentation">Praca domowa 2</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Matylda Siodmok</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row" rowspan="2">6</th>
-				<td rowspan="2">22 listopada</td>
 				<td class="schedule-presentation">Praca domowa 3</td>
+				<td class="schedule-presentation">Paulina Wałęga</td>
 				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row" rowspan="2">7</th>
-				<td rowspan="2">29 listopada 2024</td>
-				<td class="schedule-presentation">Praca domowa 4</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -210,13 +207,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">13 grudnia 2024</td>
-				<td class="schedule-presentation">Praca domowa 5</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">9</th>
+				<td>13 grudnia 2024</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -224,13 +216,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">10</th>
-				<td rowspan="2">20 grudnia 2024</td>
-				<td class="schedule-presentation">Praca domowa 6</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">10</th>
+				<td>20 grudnia 2024</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -252,13 +239,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">12</th>
-				<td rowspan="2">17 stycznia 2025</td>
-				<td class="schedule-presentation">Praca domowa 7</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">12</th>
+				<td>17 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -266,13 +248,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">13</th>
-				<td rowspan="2">24 stycznia 2025</td>
-				<td class="schedule-presentation">Praca domowa 8</td>
-				<td class="schedule-presentation">Weronika Stanisławczyk</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">13</th>
+				<td>24 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
