--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -126,13 +126,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">3</th>
-				<td rowspan="2">18 października</td>
-				<td class="schedule-presentation">Praca domowa 1</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">3</th>
+				<td>18 października</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -154,13 +149,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">5</th>
-				<td rowspan="2">15 listopada</td>
-				<td class="schedule-presentation">Praca domowa 2</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">5</th>
+				<td>15 listopada</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -168,13 +158,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">6</th>
-				<td rowspan="2">22 listopada</td>
-				<td class="schedule-presentation">Praca domowa 3</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">6</th>
+				<td>22 listopada</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -184,22 +169,22 @@
 			<tr>
 				<th scope="row" rowspan="4">7</th>
 				<td rowspan="4">29 listopada 2024</td>
+				<td class="schedule-presentation">Praca domowa 1</td>
+				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Praca domowa 2</td>
+				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Praca domowa 3</td>
+				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
 				<td class="schedule-presentation">Praca domowa 4</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Praca domowa 5</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Praca domowa 6</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Praca domowa 7</td>
 				<td class="schedule-presentation"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
@@ -220,13 +205,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">13 grudnia 2024</td>
-				<td class="schedule-presentation">Praca domowa 8</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">9</th>
+				<td>13 grudnia 2024</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -234,16 +214,26 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">10</th>
-				<td rowspan="2">20 grudnia 2024</td>
-				<td class="schedule-presentation">Praca domowa 9</td>
+				<th scope="row" rowspan="4">10</th>
+				<td rowspan="4">20 grudnia 2024</td>
+				<td class="schedule-presentation">Praca domowa 5</td>
 				<td class="schedule-presentation"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation">Praca domowa 6</td>
+				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Praca domowa 7</td>
+				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Praca domowa 8</td>
+				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -262,13 +252,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">12</th>
-				<td rowspan="2">17 stycznia 2025</td>
-				<td class="schedule-presentation">Praca domowa 10</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">12</th>
+				<td>17 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
@@ -276,13 +261,8 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">13</th>
-				<td rowspan="2">24 stycznia 2025</td>
-				<td class="schedule-presentation">Praca domowa 11</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
+				<th scope="row">13</th>
+				<td>24 stycznia 2025</td>
 				<td class="schedule-lecture">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
