--- a/uj/zajecia/24-25z/itas/index.html
+++ b/uj/zajecia/24-25z/itas/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="pl"><head><meta charset="utf-8">
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8">
 	<base href="https://twilczynski.com/">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 	<meta name="robots" content="none">
