--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -67,8 +67,8 @@
 			<tr>
 				<th scope="row">5</th>
 				<td>21 listopada 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 5</td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk1/zajecia/5">1과. 안녕하세요? 저는 안나예요.</a></td>
 			</tr>
 		</tbody>
 		<tbody>
