--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -93,19 +93,18 @@
 				<td class="schedule-presentation"><a href="https://ultimatekorean.com/ukr/012">단위 명사 (klasyfikatory)</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-presentation" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-3">높임법 (honoryfikatywność)</a></td>
+				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-3">높임법 (honoryfikatywność)</a></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
 				<td>19 grudnia 2024</td>
 				<td class="schedule-lecture">Lekcja 9</td>
-				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5">05. 세종식당이 어디에 있어요?</a></td>
+				<td class="schedule-lecture" rowspan="2" colspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5">05. 세종식당이 어디에 있어요?</a></td>
 			</tr>
 			<tr>
 				<th scope="row">10</th>
 				<td>10 stycznia 2024</td>
 				<td class="schedule-lecture">Lekcja 10</td>
-				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
 		<tbody>
