--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
@@ -479,55 +479,100 @@
 	</ol>
 </div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[39~41]. 주어진 문장이 들어갈 곳으로 가장 알맞은 것을 고르십시오.</h2> -->
-	<!-- <h3>39.</h3> -->
-	<!-- <ul> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-	<!-- </div> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p></p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>40.</h3> -->
-	<!-- <ul> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-	<!-- </div> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p></p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>41.</h3> -->
-	<!-- <ul> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-	<!-- </div> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p></p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-		<!-- <li>.</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[39~41]. 주어진 문장이 들어갈 곳으로 가장 알맞은 것을 고르십시오.</h2>
+	<h3>39.</h3>
+	<ul>
+		<li>산업 - przemysł</li>
+		<li>구조 - struktura</li>
+		<li>변동성 - zmienność</li>
+		<li>기계 - maszyna</li>
+		<li>인지적 - poznawczy</li>
+		<li>영역 - obszar</li>
+		<li>접어들다 - zbliżać się</li>
+		<li>비약적 = 아주 빠름</li>
+		<li>윤택하다 - wzbogacić</li>
+		<li>소외 - izolacja</li>
+		<li>단정(을) 짓다 - stwierdzić z pewnością</li>
+		<li>발달 = 발전</li>
+		<li>진학하다 = 학교를 다니다</li>
+		<li>전망 - przewidywanie</li>
+	</ul>
+	<p class="topik-textbox">
+		산업 구조의 변화에 따라 당연히 일자리의 변동성도 커질 것이다.
+	</p>
+	<p class="topik-textbox">
+		지금 우리는 기계가 인간의 인지적인 영역까지 대신하는 제2의 기계 시대로 접어들고 있다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이러한 비약적인 기계 발전의 시대가 인간의 삶을 더 윤택하게 할지 더 소외시킬지 단정 지을 수는 없다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 하지만 급속한 기술의 발달로 현재의 산업 구조가 크게 바뀐다는 것만은 분명하다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 그래서 지금 초등학교에 진학하는 아이들의 65%는 현재에는 없는 직업을 갖게 될 것으로 전망된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+	</p>
+	<ol>
+		<li>㉠</li>
+		<li>㉡</li>
+		<li>㉢</li>
+		<li>㉣</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>40.</h3>
+	<ul>
+		<li>이름을 걸다</li>
+		<li>우울하다 - być przygnębionym/przygnębiającym</li>
+		<li>등장인물 - bohater (np. powieści)</li>
+		<li>기호 - znak, symbol</li>
+		<li>개성 - osobowość, indywidualność</li>
+		<li>집단 - grupa</li>
+		<li>삭막하다 - być opuszczonym</li>
+		<li>암울하다 - być ponurym/posępnym</li>
+		<li>명예 - honor, zaszczyt</li>
+		<li>목숨을 던지다 - poświęcić życie</li>
+	</ul>
+	<p class="topik-textbox">
+		사람에게 이름이 있다는 것을 말 그대로 자신의 이름을 걸고 세상을 살고 있다는 것을 의미한다.
+	</p>
+	<p class="topik-textbox">
+		우울한 미래가 배경인 소설이나 영화를 보면 등장인물의 이름이 없는 경우가 많다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이름 대신 숫자나 기호 같은 것으로 불리면서 개성이 없이 집단화된 모습을 보여 준다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 사람이 이름이 아니라 번호로 불릴 때 얼마나 삭막하고 암울한지를 그러한 모습을 보면서 알게 된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 그래서 우리가 기억하는 역사 속 인물들도 이름을 명예롭게 지키고자 때로는 목숨까지 던지지 않았을까? (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
+	</p>
+	<ol>
+		<li>㉠</li>
+		<li>㉡</li>
+		<li>㉢</li>
+		<li>㉣</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>41.</h3>
+	<ul>
+		<li>계기 - okazja, szansa</li>
+		<li>조직 - grupa, organizacja</li>
+		<li>시도 - próba</li>
+		<li>인주 - (fikcyjne) miasto Inju</li>
+		<li>상사 - firma/kompania handlowa</li>
+		<li>자율 - autonomia</li>
+		<li>근무 - praca</li>
+		<li>-제 = 제도 - system</li>
+		<li>도입하다 - wprowadzić (w życie)</li>
+		<li>업무 시간 - czas pracy</li>
+		<li>정하다 - ustalić</li>
+		<li>기존 - istniejący, obecny</li>
+		<li>사원 = 회사원</li>
+		<li>시범 운영 - testowe wprowadzenie (np. programu/systemu)</li>
+		<li>분석하다 - analizować</li>
+		<li>보완하다 - uzupełnić (np. braki)</li>
+		<li>정식으로 - formalnie, na stałe</li>
+		<li>시행 - wdrożenie, implementacja</li>
+	</ul>
+	<p class="topik-textbox">
+		나아가 이 제도의 도입을 계기로 조직 문화의 개선을 위하여 다양한 유형의 시도를 계속할 것이라고 밝혔다.
+	</p>
+	<p class="topik-textbox">
+		인주상사가 이번 달부터 '자율근무제'를 도입한다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이 제도는 본인의 업무 시간을 스스로 정할 수 있어 기존의 출퇴근 시간이 사라지게 된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 이 회사에서는 오는 10월까지 모든 사원을 대상으로 자율근무제를 시범 운영할 예정이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 시범 운영 기간이 끝나면 이 제도의 장점과 단점을 분석하고 보완하여 정식으로 도입할 예정이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 다른 기업들도 이러한 인주상사의 자율근무제 시행에 큰 관심을 가지고 있다.
+	</p>
+	<ol>
+		<li>㉠</li>
+		<li>㉡</li>
+		<li>㉢</li>
+		<li>㉣</li>
+	</ol>
+</div>
 
 </body></html>
 
