--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -103,7 +103,7 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>26 February 2025</td>
-				<td class="schedule-lecture" rowspan="4">Class</td>
+				<td class="schedule-lecture" rowspan="3">Class</td>
 				<td class="schedule-lecture">smartphone addiction</td>
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/1">"한국 청소년 스마트폰 중독, OECD 국가 1위"</a></td>
 			</tr>
@@ -120,40 +120,44 @@
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/3">“40대 차장이 부서 막내” “위로금 3억 줄테니 나가라”</a></td>
 			</tr>
 			<tr>
-				<th scope="row">4</th>
-				<td>19 March 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-		</tbody>
-		<tbody>
-			<tr>
-				<th scope="row" rowspan="2">5</th>
+				<th scope="row" rowspan="2">4</th>
 				<td rowspan="2">26 March 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/1"-->Test 1<!--/a--></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">Test 1</td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/mkmb/test/1">smartphone addiction</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="3">Class</td>
+				<td class="schedule-lecture" rowspan="5">Class</td>
 				<td class="schedule-lecture">인사말씀</td>
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/4">사랑하는 계명 가족과 계명의 일원이 되신 신입생 여러분</a></td>
 			</tr>
 			<tr>
-				<th scope="row">6</th>
-				<td>2 April 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">7</th>
+				<th scope="row">5</th>
 				<td>9 April 2025</td>
 				<td class="schedule-lecture">sport</td>
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/5">생활체육도 '빈부격차'…소득 낮을수록 운동 안 해</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="3">8</th>
-				<td rowspan="3">16 April 2025</td>
+				<th scope="row">6</th>
+				<td>23 April 2025</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			</tr>
+			<tr>
+				<th scope="row">7</th>
+				<td>30 April 2025</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row">8</th>
+				<td>7 May 2025</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row" rowspan="6">9</th>
+				<td rowspan="6">14 May 2025</td>
 				<td class="schedule-presentation">Homework 1</td>
 				<td class="schedule-presentation">Julia Domińska - entertainment industry</td>
 				<td class="schedule-presentation"></td>
@@ -168,36 +172,7 @@
 				<td class="schedule-presentation">Gabriela Pikus - international success of Korean cinema</td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">23 April 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/2"-->Test 2<!--/a--></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture" rowspan="3">Class</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			</tr>
-			<tr>
-				<th scope="row">10</th>
-				<td>30 April 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">11</th>
-				<td>7 May 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row" rowspan="3">12</th>
-				<td rowspan="3">14 May 2025</td>
 				<td class="schedule-presentation">Homework 4</td>
 				<td class="schedule-presentation">Edyta Płonka - successful Korean writers</td>
 				<td class="schedule-presentation"></td>
@@ -212,12 +187,10 @@
 				<td class="schedule-presentation">Apolonia Strugarek - influence of social media</td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">13</th>
+				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">21 May 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/3"-->Test 3<!--/a--></td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/2"-->Test 2<!--/a--></td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
 			</tr>
@@ -227,19 +200,19 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
+				<th scope="row">11</th>
 				<td>28 May 2025</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">12</th>
 				<td>4 June 2025</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="3">16</th>
+				<th scope="row" rowspan="3">13</th>
 				<td rowspan="3">11 June 2025</td>
 				<td class="schedule-presentation">Homework 7</td>
 				<td class="schedule-presentation">Julia Trzaska - human rights activism</td>
@@ -258,9 +231,9 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row">17</th>
+				<th scope="row">14</th>
 				<td>18 June 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/4"-->Examination <nobr>(16.45–17.45, s. 1.01)</nobr></a></td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/4"-->Examination <nobr>(16.45–17.45, 1.01)</nobr></a></td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
 			</tr>
