--- a/uj/zajecia/24-25l/klc2/index.html
+++ b/uj/zajecia/24-25l/klc2/index.html
@@ -75,54 +75,36 @@
 			<tr>
 				<th scope="row">1</th>
 				<td>3월 7일</td>
-				<td class="schedule-lecture" rowspan="7">수업</td>
+				<td class="schedule-lecture" rowspan="5">수업</td>
 				<td class="schedule-lecture">세종한국어 회화 2 제6과</td>
-			</tr>
-			<tr>
-				<th scope="row">2</th>
-				<td>3월 14일</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제7과</td>
-			</tr>
-			<tr>
-				<th scope="row">3</th>
-				<td>3월 21일</td>
-			</tr>
-			<tr>
-				<th scope="row">4</th>
-				<td>3월 28일</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제8과</td>
-			</tr>
-			<tr>
-				<th scope="row">5</th>
-				<td>4월 4일</td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
 				<td>4월 11일</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제9과</td>
+				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제7과</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">7</th>
-				<td rowspan="2">4월 25일</td>
-			</tr>
-			<tr>
-				<td class="schedule-exam">시험</td>
-				<td class="schedule-exam">중간 시험 <nobr>(17:15–18:45, -1.15호)</nobr></td>
+				<th scope="row">7</th>
+				<td>4월 25일</td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
 				<td>5월 9일</td>
-				<td class="schedule-lecture" rowspan="6">수업</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제10과</td>
+				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제8과</td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
 				<td>5월 16일</td>
 			</tr>
 			<tr>
-				<th scope="row">10</th>
-				<td>5월 23일</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제11과</td>
+				<th scope="row" rowspan="2">10</th>
+				<td rowspan="2">5월 23일</td>
+				<td class="schedule-exam">시험</td>
+				<td class="schedule-exam">중간 시험 <nobr>(?, -1.15호)</nobr></td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture" rowspan="4">수업</td>
+				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제9과</td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
@@ -131,21 +113,17 @@
 			<tr>
 				<th scope="row">12</th>
 				<td>6월 6일</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제12과</td>
+				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제10과</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">13</th>
-				<td rowspan="2">6월 13일</td>
-			</tr>
-			<tr>
-				<td class="schedule-exam">시험</td>
-				<td class="schedule-exam">기말 시험 <nobr>(17:15–18:45, -1.15호)</nobr></td>
+				<th scope="row">13</th>
+				<td>6월 13일</td>
 			</tr>
 			<tr>
 				<th scope="row">14</th>
 				<td>6월 ?일</td>
-				<td class="schedule-lecture">수업</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-exam">시험</td>
+				<td class="schedule-exam">기말 시험 <nobr>(?, -1.15호)</nobr></td>
 			</tr>
 		</tbody>
 	</table>
