--- a/uj/zajecia/24-25l/ljk5/zajecia/znaki/3/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/znaki/3/index.html
@@ -170,141 +170,143 @@
 	</tr>
 </table>
 
-<!-- <h3>文자로 끝나는 단어</h3> -->
+<h3>文자로 끝나는 단어</h3>
 
-<!-- <table class="hanja"> -->
-	<!-- <tbody> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-1"></td> -->
-			<!-- <td class="hanja-related-2"></td> -->
-			<!-- <td class="hanja-related-3"></td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-10"></td> -->
-			<!-- <td class="hanja-core" rowspan="2">文</td> -->
-			<!-- <td class="hanja-related-4"></td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-9"></td> -->
-			<!-- <td class="hanja-related-5"></td> -->
-		<!-- </tr> -->
-		<!-- <tr> -->
-			<!-- <td class="hanja-related-8"></td> -->
-			<!-- <td class="hanja-related-7"></td> -->
-			<!-- <td class="hanja-related-6"></td> -->
-		<!-- </tr> -->
-	<!-- </tbody> -->
-<!-- </table> -->
+<table class="hanja">
+	<tbody>
+		<tr>
+			<td class="hanja-related-1">公</td>
+			<td class="hanja-related-2">論</td>
+			<td class="hanja-related-3">本</td>
+		</tr>
+		<tr>
+			<td class="hanja-related-10">案內</td>
+			<td class="hanja-core" rowspan="2">文</td>
+			<td class="hanja-related-4">英</td>
+		</tr>
+		<tr>
+			<td class="hanja-related-9">原</td>
+			<td class="hanja-related-5">例</td>
+		</tr>
+		<tr>
+			<td class="hanja-related-8">漢</td>
+			<td class="hanja-related-7">注</td>
+			<td class="hanja-related-6">作</td>
+		</tr>
+	</tbody>
+</table>
 
-<!-- <ol> -->
-	<!-- <li>구분 區分 -->
-		<!-- <ul> -->
-			<!-- <li>구분할 구</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/0dd84bb404d240998bc34fc069de9939">https://hanja.dict.naver.com/#/entry/ccko/0dd84bb404d240998bc34fc069de9939</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>충분 充分 -->
-		<!-- <ul> -->
-			<!-- <li>채울 충</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/c5e60817de674522a06d0922f8e91c30">https://hanja.dict.naver.com/#/entry/ccko/c5e60817de674522a06d0922f8e91c30</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>기분 氣分 -->
-		<!-- <ul> -->
-			<!-- <li>기운 기</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/228cc1550bab4874a80d6fa9b08b3df1">https://hanja.dict.naver.com/#/entry/ccko/228cc1550bab4874a80d6fa9b08b3df1</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>덕분 德分 -->
-		<!-- <ul> -->
-			<!-- <li>덕 덕</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/c4ede003478a44dd865ad4c89ebdf697">https://hanja.dict.naver.com/#/entry/ccko/c4ede003478a44dd865ad4c89ebdf697</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>부분 部分 -->
-		<!-- <ul> -->
-			<!-- <li>거느릴 부</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/a868c09ee19548da9177ba967f32de5e">https://hanja.dict.naver.com/#/entry/ccko/a868c09ee19548da9177ba967f32de5e</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>인분 人分 -->
-		<!-- <ul> -->
-			<!-- <li>사람 인</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/d446a20e9291464582e611a365fffa4e">https://hanja.dict.naver.com/#/entry/ccko/d446a20e9291464582e611a365fffa4e</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>신분 身分 -->
-		<!-- <ul> -->
-			<!-- <li>몸 신</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/9688c34b633f47c2a7637825c97ac220">https://hanja.dict.naver.com/#/entry/ccko/9688c34b633f47c2a7637825c97ac220</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>성분 成分 -->
-		<!-- <ul> -->
-			<!-- <li>이룰 성</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/47f033740a5748daa200046b055d0acb">https://hanja.dict.naver.com/#/entry/ccko/47f033740a5748daa200046b055d0acb</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>수분 水分 -->
-		<!-- <ul> -->
-			<!-- <li>물 수</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/10ecd8745cb149558471bee716b98b8c">https://hanja.dict.naver.com/#/entry/ccko/10ecd8745cb149558471bee716b98b8c</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-	<!-- <li>친분 親分 -->
-		<!-- <ul> -->
-			<!-- <li>친할 친</li> -->
-			<!-- <li><a href="https://hanja.dict.naver.com/#/entry/ccko/92448eb6fbb24fad89ceca8e8b16368c">https://hanja.dict.naver.com/#/entry/ccko/92448eb6fbb24fad89ceca8e8b16368c</a></li> -->
-		<!-- </ul> -->
-	<!-- </li> -->
-<!-- </ol> -->
+<ol>
+	<li>공문 公文
+		<ul>
+			<li>공평할 공</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/043d279b36bb40d78762d0bbadad8ffe">https://hanja.dict.naver.com/#/entry/ccko/043d279b36bb40d78762d0bbadad8ffe</a></li>
+		</ul>
+	</li>
+	<li>논문 論文
+		<ul>
+			<li>논할 논</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/670e28a3090f400fa002ec28746e6f2c">https://hanja.dict.naver.com/#/entry/ccko/670e28a3090f400fa002ec28746e6f2c</a></li>
+		</ul>
+	</li>
+	<li>본문 本文
+		<ul>
+			<li>근본 본</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/61f01202d83841a3bd5152e31394fe31">https://hanja.dict.naver.com/#/entry/ccko/61f01202d83841a3bd5152e31394fe31</a></li>
+		</ul>
+	</li>
+	<li>영문 英文
+		<ul>
+			<li>꽃부리 영</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/bb673e8df33c4a4ead8301208b739096">https://hanja.dict.naver.com/#/entry/ccko/bb673e8df33c4a4ead8301208b739096</a></li>
+		</ul>
+	</li>
+	<li>예문 例文
+		<ul>
+			<li>법식 례(예)</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/c5c836f2372d419a93c973139f8e377b">https://hanja.dict.naver.com/#/entry/ccko/c5c836f2372d419a93c973139f8e377b</a></li>
+		</ul>
+	</li>
+	<li>작문 作文
+		<ul>
+			<li>지을 작</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/c2be23bbe9914702a01ed8b619fcd143">https://hanja.dict.naver.com/#/entry/ccko/c2be23bbe9914702a01ed8b619fcd143</a></li>
+		</ul>
+	</li>
+	<li>주문 注文
+		<ul>
+			<li>부을 주</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/9631e2959ced46fea2d9d907f65bda3a">https://hanja.dict.naver.com/#/entry/ccko/9631e2959ced46fea2d9d907f65bda3a</a></li>
+		</ul>
+	</li>
+	<li>한문 漢文
+		<ul>
+			<li>한수 한/한나라 한</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/1c46255422694417abd595c1ab55758f">https://hanja.dict.naver.com/#/entry/ccko/1c46255422694417abd595c1ab55758f</a></li>
+		</ul>
+	</li>
+	<li>원문 原文
+		<ul>
+			<li>언덕 원/근원 원</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/2b862148b14c4053aca634b88f435069">https://hanja.dict.naver.com/#/entry/ccko/2b862148b14c4053aca634b88f435069</a></li>
+		</ul>
+	</li>
+	<li>안내문 案內文
+		<ul>
+			<li>책상 안</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/a1c83d38126a4ecfaceacc408cc80df0">https://hanja.dict.naver.com/#/entry/ccko/a1c83d38126a4ecfaceacc408cc80df0</a></li>
+			<li>안 내</li>
+			<li><a href="https://hanja.dict.naver.com/#/entry/ccko/10f303bb84a74735a21b14ac0279bfeb">https://hanja.dict.naver.com/#/entry/ccko/10f303bb84a74735a21b14ac0279bfeb</a></li>
+		</ul>
+	</li>
+</ol>
 
-<!-- <table> -->
-	<!-- <thead> -->
-		<!-- <th>한자어</th> -->
-		<!-- <th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th> -->
-	<!-- </thead> -->
-	<!-- <tr> -->
-		<!-- <td>區分</td> -->
-		<!-- <td>(수업, 초중고급)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>充分</td> -->
-		<!-- <td>(음식, 준비하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>氣分</td> -->
-		<!-- <td>(운동, 좋아지다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>德分</td> -->
-		<!-- <td>(한국 드라마, 한국말)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>部分</td> -->
-		<!-- <td>(한류, 한국 문화)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>人分</td> -->
-		<!-- <td>(우리 가족, 불고기)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>身分</td> -->
-		<!-- <td>(외교관, 일하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>成分</td> -->
-		<!-- <td>(생명체, 구성하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>水分</td> -->
-		<!-- <td>(피부 건강, 섭취하다)</td> -->
-	<!-- </tr> -->
-	<!-- <tr> -->
-		<!-- <td>親分</td> -->
-		<!-- <td>(그분, 오랫동안)</td> -->
-	<!-- </tr> -->
-<!-- </table> -->
+<table>
+	<thead>
+		<th>한자어</th>
+		<th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th>
+	</thead>
+	<tr>
+		<td>公文</td>
+		<td>(보건복지부, 단체, 보내다)</td>
+	</tr>
+	<tr>
+		<td>論文</td>
+		<td>(심사, 합격하다, 졸업하다)</td>
+	</tr>
+	<tr>
+		<td>本文</td>
+		<td>(머리말, 맺음말)</td>
+	</tr>
+	<tr>
+		<td>英文</td>
+		<td>(계약서, 국문, 작성하다)</td>
+	</tr>
+	<tr>
+		<td>例文</td>
+		<td>(통하다, 단어를 외우다)</td>
+	</tr>
+	<tr>
+		<td>作文</td>
+		<td>(쓰기 수업, 실력)</td>
+	</tr>
+	<tr>
+		<td>注文</td>
+		<td>(인터넷, 제품, 저렴하다)</td>
+	</tr>
+	<tr>
+		<td>漢文</td>
+		<td>(중학교, 선택과목)</td>
+	</tr>
+	<tr>
+		<td>原文</td>
+		<td>(번역, 차이, 의역)</td>
+	</tr>
+	<tr>
+		<td>案內文</td>
+		<td>(박물관, 여러 언어)</td>
+	</tr>
+</table>
 
 </body></html>
 
