--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -129,7 +129,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-exam">Kolokwium 1</td>
-				<td class="schedule-exam">muzyka, malarstwo, literatura</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/assk/testy/1">muzyka, malarstwo, literatura</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 5</td>
