--- a/uj/zajecia/25-26z/klc3/index.html
+++ b/uj/zajecia/25-26z/klc3/index.html
@@ -65,7 +65,7 @@
 		<thead>
 			<tr>
 				<th scope="col">주</th>
-				<th scope="col">일자</th>
+				<th scope="col" colspan="2">일자</th>
 				<th scope="col">종류</th>
 				<th scope="col" colspan="2">제목</th>
 			</tr>
@@ -74,7 +74,7 @@
 		<tbody>
 			<tr>
 				<th scope="row" rowspan="2">1</th>
-				<td rowspan="2">2025년 10월 3일</td>
+				<td colspan="2" rowspan="2">2025년 10월 3일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2">자기소개</td>
 			</tr>
@@ -84,13 +84,13 @@
 			</tr>
 			<tr>
 				<th scope="row">2</th>
-				<td>2025년 10월 10일</td>
+				<td colspan="2">2025년 10월 10일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2">한국인이 불안한 순간 TOP 9</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">3·4</th>
-				<td rowspan="2">2025년 10월 17·24일</td>
+				<td colspan="2" rowspan="2">2025년 10월 17·24일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td>
 			</tr>
@@ -100,7 +100,7 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">5</th>
-				<td rowspan="2">2025년 11월 7일</td>
+				<td colspan="2" rowspan="2">2025년 11월 7일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2">병원 증상 설명하기</td>
 			</tr>
@@ -110,7 +110,7 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">6</th>
-				<td rowspan="2">2025년 11월 21일</td>
+				<td colspan="2" rowspan="2">2025년 11월 21일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td>
 			</tr>
@@ -120,16 +120,16 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">7</th>
-				<td rowspan="2">2025년 11월 28일</td>
+				<td colspan="2" rowspan="2">2025년 11월 28일</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</a></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="10">8</th>
-				<td rowspan="10">2025년 12월 5일</td>
-				<td class="schedule-exam" rowspan="8">말하기 중간고사</td>
+				<th scope="row" rowspan="7">8</th>
+				<td colspan="2" rowspan="7">2025년 12월 5일</td>
+				<td class="schedule-exam" rowspan="6">말하기 중간고사</td>
 				<td class="schedule-exam">8:45–8:53</td>
 				<td class="schedule-exam">아네타, 주잔나</td>
 			</tr>
@@ -137,14 +137,14 @@
 				<td class="schedule-exam">8:53–9:01</td>
 				<td class="schedule-exam">이레네, 안나</td>
 			</tr>
-			<tr>
-				<td class="schedule-exam">9:01–9:09</td>
-				<td class="schedule-exam">베아타, 베로니카</td>
-			</tr>
-			<tr>
-				<td class="schedule-exam">9:09–9:17</td>
-				<td class="schedule-exam">하티제, 에바</td>
-			</tr>
+			<!-- <tr> -->
+				<!-- <td class="schedule-exam">9:01–9:09</td> -->
+				<!-- <td class="schedule-exam">베아타, 베로니카</td> -->
+			<!-- </tr> -->
+			<!-- <tr> -->
+				<!-- <td class="schedule-exam">9:09–9:17</td> -->
+				<!-- <td class="schedule-exam">하티제, 에바</td> -->
+			<!-- </tr> -->
 			<tr>
 				<td class="schedule-exam">9:17–9:25</td>
 				<td class="schedule-exam">킹가 두데크, 카롤리나</td>
@@ -163,15 +163,22 @@
 			</tr>
 			<tr>
 				<td class="schedule-exam">문법 중간고사</td>
-				<td class="schedule-exam" colspan="2">높임법; 어감; 시간 표현; 부정 표현</td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/25-26z/klc3/tests/grammar/1">높임법; 어감</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">2025년 12월 12일</td>
+				<td colspan="2" rowspan="2">2025년 12월 12일</td>
+				<td class="schedule-lecture">말하기</td>
+				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/2">2과. 문제가 해결될 수 있도록 가서 이야기를 해 봐</a></td>
+			</tr>
+			<tr>
+				<td class="schedule-lecture">문법</td>
+				<td class="schedule-lecture" colspan="2">높임법 연습</td>
+			</tr>
+			<tr>
+				<th scope="row" rowspan="4">10</th>
+				<td rowspan="4">2025년 12월 19일</td>
+				<td rowspan="2">8:45~11:15</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
@@ -180,8 +187,7 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">10</th>
-				<td rowspan="2">2025년 12월 19일</td>
+				<td rowspan="2">13:15~15:45</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
@@ -191,7 +197,7 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">11</th>
-				<td rowspan="2">2026년 1월 9일</td>
+				<td colspan="2" rowspan="2">2026년 1월 9일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
@@ -201,7 +207,7 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">12</th>
-				<td rowspan="2">2026년 1월 16일</td>
+				<td colspan="2" rowspan="2">2026년 1월 16일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
@@ -211,7 +217,7 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">13</th>
-				<td rowspan="2">2026년 1월 23일</td>
+				<td colspan="2" rowspan="2">2026년 1월 23일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
@@ -221,7 +227,7 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">14</th>
-				<td rowspan="2">2026년 1월 30일</td>
+				<td colspan="2" rowspan="2">2026년 1월 30일</td>
 				<td class="schedule-exam">말하기 기말고사</td>
 				<td class="schedule-exam" colspan="2"></td>
 			</tr>
