--- a/uj/zajecia/24-25l/klc2/index.html
+++ b/uj/zajecia/24-25l/klc2/index.html
@@ -67,7 +67,7 @@
 				<th scope="col">주</th>
 				<th scope="col">일자</th>
 				<th scope="col">종류</th>
-				<th scope="col">제목</th>
+				<th scope="col" colspan="2">제목</th>
 			</tr>
 		</thead>
 
@@ -76,12 +76,12 @@
 				<th scope="row">1</th>
 				<td>3월 7일</td>
 				<td class="schedule-lecture" rowspan="5">수업</td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/klc2/class/6">6과. 푹 쉬어서 괜찮아졌어요</a></td>
+				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/24-25l/klc2/class/6">6과. 푹 쉬어서 괜찮아졌어요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
 				<td>4월 11일</td>
-				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/klc2/class/7">7과. 일곱 시로 예약해 주세요</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="uj/zajecia/24-25l/klc2/class/7">7과. 일곱 시로 예약해 주세요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
@@ -89,45 +89,76 @@
 			</tr>
 			<tr>
 				<th scope="row">8</th>
-				<td>5월 9일</td>
-				<td class="schedule-lecture" rowspan="2">8과. 부산에 가 봤어요?</td>
-			</tr>
-			<tr>
-				<th scope="row">9</th>
 				<td>5월 16일</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="uj/zajecia/24-25l/klc2/class/8">8과. 부산에 가 봤어요?</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">10</th>
-				<td rowspan="2">5월 23일</td>
-				<td class="schedule-exam">시험</td>
-				<td class="schedule-exam">중간 시험 <nobr>(?, -1.15호)</nobr></td>
+				<th scope="row" rowspan="11">9</th>
+				<td rowspan="11">5월 23일</td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="4">수업</td>
-				<td class="schedule-lecture" rowspan="2">9과. 이번 축제 때 꼭 오세요</td>
+				<td class="schedule-exam" rowspan="10">시험</td>
+				<td class="schedule-exam" colspan="2">중간 시험 <nobr>(11:30–13:00, -1.15호)</nobr></td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">11:30–11:40</td>
+				<td class="schedule-exam">Łoś Karol</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">11:40–11:50</td>
+				<td class="schedule-exam">Mądra Maria</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">11:50–12:00</td>
+				<td class="schedule-exam">Trajdos Julia</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">12:00–12:10</td>
+				<td class="schedule-exam">Grabowska Patrycja</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">12:10–12:20</td>
+				<td class="schedule-exam">Baranowski Michał</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">12:20–12:30</td>
+				<td class="schedule-exam">Mirowska Agnieszka</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">12:30–12:40</td>
+				<td class="schedule-exam">Savitska Viktoriia</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">12:40-12:50</td>
+				<td class="schedule-exam">Kruszewska Maja</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">12:50–13:00</td>
+				<td class="schedule-exam">Dubert Karolina</td>
+			</tr>
+			<tr>
+				<th scope="row">10</th>
+				<td>5월 30일</td>
+				<td class="schedule-lecture" rowspan="3">수업</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2">9과. 이번 축제 때 꼭 오세요</td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
-				<td>5월 30일</td>
+				<td>6월 6일</td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
-				<td>6월 6일</td>
-				<td class="schedule-lecture" rowspan="2">10과. 취미가 같은 사람을 만나고 싶었어요</td>
+				<td>6월 13일</td>
+				<td class="schedule-lecture" colspan="2">10과. 취미가 같은 사람을 만나고 싶었어요</td>
 			</tr>
 			<tr>
 				<th scope="row">13</th>
-				<td>6월 13일</td>
-			</tr>
-			<tr>
-				<th scope="row">14</th>
 				<td>6월 ?일</td>
 				<td class="schedule-exam">시험</td>
-				<td class="schedule-exam">기말 시험 <nobr>(?, -1.15호)</nobr></td>
+				<td class="schedule-exam" colspan="2">기말 시험 <nobr>(?, -1.15호)</nobr></td>
 			</tr>
 		</tbody>
 	</table>
 </div>
 
 </body></html>
-
