--- a/uj/zajecia/24-25l/mkmb/class/6/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/6/index.html
@@ -42,9 +42,21 @@
 <h3>번역</h3>
 
 <p>0. "한국에만 안 돼요"…외국인 관광 불편 1위 '구글맵 불통'</p>
+<ul>
+	<li>“Doesn't work only in Korea” - Google Maps not working picked as the most inconvenient thing by foreign tourists</li>
+</ul>
 <p>1. "한국에는 카카오맵이나 네이버 지도가 아니면 길을 찾을 수 없다. 외국인이 힘들어한다"</p>
+<ul>
+	<li>“You can't find a way in Korea unless it's Kakao Map or Naver Map. Foreigners have a hard time.”</li>
+</ul>
 <p>2. 외국인 관광객이 한국 여행 중 아쉬운 부문으로 교통 정보 부족을 꼽는다.</p>
+<ul>
+	<li>Foreign tourists pick insufficient traffic information as an inconvenient factor when travelling in Korea.</li>
+</ul>
 <p>3. 한국관광공사 외래관광객조사에 따르면 지난 2023년 기준으로 길 찾기(80.4%)가 만족도가 언어 소통(70.9%) 다음으로 가장 낮았다.</p>
+<ul>
+	<li>According to a survey conducted on foreign tourists by Korea Tourism Organization in 2023, satisfaction regarding finding directions was the lowest (80.4%) just before language communication (70.9%).</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -63,11 +75,29 @@
 <h3>번역</h3>
 
 <p>4. 길 찾기에 어려움을 겪는 이유는 구글 지도 때문으로 보인다.</p>
+<ul>
+	<li>The difficulty in finding directions appears to be due to Google Maps.</li>
+</ul>
 <p>5-1. 한국관광공사가 지난해 3월에 발표한 방한 외래객 대상 여행 앱 이용 조사에 따르면</p>
+<ul>
+	<li>According to a survey on the use of travel applications among foreign tourists visiting Korea conducted by Korea Tourism Organization in March last year,</li>
+</ul>
 <p>5-2. 구글 지도가 가장 불만족한 앱(30.2%)에 올랐다.</p>
+<ul>
+	<li>Google Maps was picked as the most inconvenient app (30.2%).</li>
+</ul>
 <p>6. 구글 지도는 전 세계 월 이용자 수 10억명에 달하는 전 세계 1위 지도 서비스다.</p>
+<ul>
+	<li>Google Maps is the number one map service in the whole world with 1 billion monthly users.</li>
+</ul>
 <p>7-1. 그런데도 한국에서는 외국인 관광객에게 가장 불만족스러운 여행 앱으로 꼽히는 이유는</p>
+<ul>
+	<li>Despite that, the reason why in Korea foreign tourists pick it as the most inconvenient travel app is</li>
+</ul>
 <p>7-2. 한국에서만 다양한 기능을 제공하지 않기 때문이다.</p>
+<ul>
+	<li>due to Google Maps not offering many options.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -87,10 +117,25 @@
 <h3>번역</h3>
 
 <p>8. 구글 지도는 장소 정보뿐만 아니라 길 찾기, 스트리트 뷰, 실내 지도, 실시간 교통정보, 내비게이션, 3D 지도, 오프라인 지도(인터넷 연결 없이도 미리 다운로드한 지역의 길 찾기 가능) 등을 제공한다.</p>
+<ul>
+	<li>Not only does Google Maps provide location information but also directions, street view, indoor maps, real-time traffic information, navigation, 3D maps, offline maps (making possible to find directions in pre-downloaded areas without an Internet connection), and many others.</li>
+</ul>
 <p>9. 하지만 한국에서는 대중교통을 제외한 도보와 자동차, 자전거 길 찾기 서비스를 제공하지 않는다.</p>
+<ul>
+	<li>However, in Korea, the map provides only public transport information, and it doesn't provide walking, car, or bicycle directions service.</li>
+</ul>
 <p>10. 대중교통 길 찾기도 정보 제공에 충실하지 않은 경우가 있다.</p>
+<ul>
+	<li>In some cases, public transport information is not trustworthy.</li>
+</ul>
 <p>11. 구글 지도가 제공하는 3D 지도, 내비게이션 등도 한국에서 볼 수 없다.</p>
+<ul>
+	<li>3D maps, navigation, and many other functions also do not work in Korea.</li>
+</ul>
 <p>12. 네이버 지도, 카카오맵, 티맵 등 토종 지도 앱보다 서비스 경쟁력이 떨어진다.</p>
+<ul>
+	<li>As such, Google Maps cannot compete with Korean map applications like Naver Map, Kakao Map, and T Map.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -114,11 +159,29 @@
 <h3>번역</h3>
 
 <p>13-1. 구글 지도 품질이 한국에서만 떨어지는 점을 두고</p>
+<ul>
+	<li>Regarding the quality of Google Maps being low only in Korea,</li>
+</ul>
 <p>13-2. 국내 관광업계·학계에서는 '여행 장벽'이라며</p>
+<ul>
+	<li>the domestic tourism industry and academia call it a “travel obstacle”,</li>
+</ul>
 <p>13-3. 구글 지도 서비스 개선 필요성을 줄곧 주장해 왔다.</p>
+<ul>
+	<li>and they have repeatedly insisted on the necessity to improve the Google Maps service.</li>
+</ul>
 <p>14-1. "한국에서 구글맵이 잘 작동하지 않고</p>
+<ul>
+	<li>It has been pointed out that “Google Maps doesn't work well in Korea,</li>
+</ul>
 <p>14-2. 나라마다 영문 표기 방식이 다 달라</p>
+<ul>
+	<li>and depending on the app language, the Korean romanisation is totally different,</li>
+</ul>
 <p>14-3. 외국인들이 헷갈린다"고도 지적했다.</p>
+<ul>
+	<li>causing confusion among foreigners”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -146,16 +209,49 @@
 <h3>번역</h3>
 
 <p>15. 구글 지도 서비스 품질이 왜 한국에서만 안 좋을까.</p>
+<ul>
+	<li>Why is Google Maps' quality low only in Korea?</li>
+</ul>
 <p>16. 구글의 공식 입장은 한국 정부의 국내 지도 데이터 반출 제한이다.</p>
+<ul>
+	<li>Google's official position is that the South Korean government restricts the transfer of domestic map data.</li>
+</ul>
 <p>17. 정부 규제 때문에 자동차·자전거 길 찾기, 실시간 교통상황 등을 제공하지 못한다는 주장이다.</p>
+<ul>
+	<li>The company claims that because of the government's regulations, it is impossible to provide directions for cars and bicycles, and real-time traffic conditions.</li>
+</ul>
 <p>18-1. 구글이 2016년 자사 공식 블로그에 게재한 글에 따르면</p>
+<ul>
+	<li>According to a post on the official Google's blog from 2016,</li>
+</ul>
 <p>18-2. 구글 측은 혁신적인 지도 서비스를 제공하기 위해</p>
+<ul>
+	<li>in order to provide innovative map service,</li>
+</ul>
 <p>18-3. 고정밀 지도 데이터가 필요하다고 밝혔다.</p>
+<ul>
+	<li>high precision map data is required.</li>
+</ul>
 <p>19-1. 하지만 구글은 정부 규제 탓에</p>
+<ul>
+	<li>However, because of the government's limitations,</li>
+</ul>
 <p>19-2. 수많은 해외 관광객이 구글 지도를 제대로 사용할 수 없어</p>
+<ul>
+	<li>a large number of foreign tourists cannot properly use Google Maps,</li>
+</ul>
 <p>19-3. 큰 불편을 겪고 있다며</p>
+<ul>
+	<li>thus they experience great difficulties,</li>
+</ul>
 <p>19-4. 한국에 지도 서비스를 활용한 혁신 도입이 늦어지면서</p>
+<ul>
+	<li>and with a further delay of adopting innovative map services in Korea,</li>
+</ul>
 <p>19-5. 향후 글로벌 경쟁에 뒤처질 수 있다고 주장했다.</p>
+<ul>
+	<li>the country may lag behind in the global competition in the future.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -180,8 +276,17 @@
 <h3>번역</h3>
 
 <p>20. 구글은 2007년, 2016년 두 차례에 걸쳐 축척 1대 5000 고정밀 지도 데이터 반출을 요청했다.</p>
+<ul>
+	<li>Twice, in 2007 and 2016, Google requested a transfer of high precision map data at a scale of 1:5000.</li>
+</ul>
 <p>21. 그럼에도 정부는 군사·보안시설 좌표 유출 등 안보 우려를 이유로 요구를 받아들이지 않았다.</p>
+<ul>
+	<li>However, the government refused to accept the request due to a concern of a possible leakage of coordinates of military and security installations.</li>
+</ul>
 <p>22. 구글은 최근 국토지리정보원에 또다시 1대 5000 고정밀 지도 데이터 반출을 요청했다.</p>
+<ul>
+	<li>Recently, Google has yet again made a request to the National Geographic Information Institute for a transfer of high precision map data of a scale of 1:5000.</li>
+</ul>
 
 <h3>어휘</h3>
 
