--- a/uj/zajecia/24-25l/mkmb/class/7/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/7/index.html
@@ -42,8 +42,17 @@
 <h3>번역</h3>
 
 <p>0-1. '갑질 끝판왕' 아디다스, 상생 위해 한 건 '공문 한 장'</p>
+<ul>
+	<li>Adidas, the king of mobbing - just one official note pushing for „coexistence”</li>
+</ul>
 <p>0-2. 108명 점주 중 절반은 폐업…7명은 파산</p>
+<ul>
+	<li>Half of 108 owners closed stores, 7 owners went bankrupt</li>
+</ul>
 <p>0-3. 지난 국정감사 이후 점주 상생 노력 전무</p>
+<ul>
+	<li>No effort for coexistence after the parliamentary inspection</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -62,9 +71,18 @@
 
 <h3>번역</h3>
 
-<p>1, 아디다스코리아가 지난해 국정감사에서 점주들과의 상생 방안을 마련하겠다고 약속했다.</p>
+<p>1. 아디다스코리아가 지난해 국정감사에서 점주들과의 상생 방안을 마련하겠다고 약속했다.</p>
+<ul>
+	<li>During the last year’s parliamentary inspection, Adidas Korea promised to come up with a plan for coexistence with the store owners.</li>
+</ul>
 <p>2. 하지만 1년간 공문 한 장 발송 외에는 아무런 조치를 취하지 않은 사실이 드러나 비판이 쏟아지고 있다.</p>
+<ul>
+	<li>However, except for sending an official note in a 1-year period, the company did not take any actions, which has brought much criticism.</li>
+</ul>
 <p>3. 더욱이 해당 공문은 올해 국정감사 소환을 앞둔 십여 일 전 발송된 것으로 확인됐다.</p>
+<ul>
+	<li>Furthermore, it has been confirmed that the note had been sent just 10 days ahead of this year's parliamentary inspection.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -84,11 +102,29 @@
 <h3>번역</h3>
 
 <p>4. 지난 21일 국회 정무위원회는 공정거래위원회 국정감사에 피터 곽 아디다스코리아 대표를 증인으로 소환했다.</p>
+<ul>
+	<li>On October 21, the National Policy Comittee of the National Assembly summoned the General Manager of Adidas Korea, Peter Kwak, as a witness to the parliamentary inspection of the Fair Trade Commission.</li>
+</ul>
 <p>5-1. 지난해에도 아디다스의 갑질 논란과 관련해 국감에 출석했던 곽 대표는</p>
+<ul>
+	<li>Last year too, GM Kwak attended the parliamentary inspection due to the Adidas's mobbing controversies.</li>
+</ul>
 <p>5-2. 당시 상생 방안을 마련하겠다고 약속했다.</p>
+<ul>
+	<li>At that time, he promised to provide a plan to coexist with the store owners.</li>
+</ul>
 <p>6. 하지만 이번 국감을 통해 지난 1년간 상생을 위한 노력은 전무했던 것으로 드러났다.</p>
+<ul>
+	<li>Yet, this parliamentary inspection has revealed that over the last year no effort for coexistence had been made.</li>
+</ul>
 <p>7-1. 점주들에게 한차례 공문을 발송한 바 있지만</p>
+<ul>
+	<li>While the store owners were sent an official note,</li>
+</ul>
 <p>7-2. 이달 국감 소환을 앞두고 부랴부랴 발송된 것으로 이날 국감에서 확인됐다.</p>
+<ul>
+	<li>the inspection has confirmed that it had been hastily sent ahead of this month's inspection.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -115,10 +151,25 @@
 <h3>번역</h3>
 
 <p>8-1. 신장식 조국혁신당 의원은 "지난해 국정감사에서 아디다스코리아가 한국 시장 특수성에 맞는 대책을 검토하겠다고 했지만</p>
+<ul>
+	<li>Shin Jang-sik, a lawmaker from Rebuilding Korea Party, said that “during the last year's parliamentary inspection, Adidas Korea promised that they would consider a solution suitable for the Korean market,</li>
+</ul>
 <p>8-2. 실제로 한 일은 지난 10월 4일에 보낸 공문 한 장이 전부"라며</p>
+<ul>
+	<li>while in reality they sent just one official note on October 4”,</li>
+</ul>
 <p>8-3. 아디다스의 무성의한 태도를 강하게 비판했다.</p>
+<ul>
+	<li>heavily criticising Adidas’s insincere attitude.</li>
+</ul>
 <p>9-1. 국감장에서는 피터 곽 대표의 불성실한 태도와 통역 논란까지 더해지며 의원들의 질타가 계속됐고,</p>
+<ul>
+	<li>At the parliamentary inspection, lawmakers constantly criticised GM Peter Kwak for his insincere attitude in addition to an interpretation controversy.</li>
+</ul>
 <p>9-2. 이에 과거 아디다스코리아의 갑질에 다시 이목이 쏠리고 있다.</p>
+<ul>
+	<li>As a result, the spotlight is yet again on Adidas Korea's mobbing.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -145,9 +196,21 @@
 <h3>번역</h3>
 
 <p>10. 아디다스코리아는 지난 2022년 매출 악화 등을 이유로 '퓨처 파트너' 정책을 발표했다.</p>
+<ul>
+	<li>Adidas Korea announced its "Future Partner" policy in 2022 due to declining sales.</li>
+</ul>
 <p>11-1. 이 정책은 가맹점을 평가해 우수한 매장만 선택하고 계약을 유지하겠다는 내용으로,</p>
+<ul>
+	<li>The policy evaluated franchised stores, selecting and maintaining contracts only with the best ones.</li>
+</ul>
 <p>11-2. 여기에 선정되지 못한 매장은 2025년 6월까지 매장을 정리하라는 일방적 통보를 받았다.</p>
+<ul>
+	<li>Until June 2025, stores that were not selected were being notified about having to shut down their stores.</li>
+</ul>
 <p>12. 선정 기준 또한 아디다스코리아의 일방적인 결정으로 정해졌다.</p>
+<ul>
+	<li>Criteria of selection were also one-sidedly decided of Adidas Korea.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -168,11 +231,29 @@
 <h3>번역</h3>
 
 <p>13-1. 그 결과 120여개의 가맹점 중 단 19곳만이 퓨처 파트너로 선정됐고</p>
+<ul>
+	<li>As a result, only 19 out of about 120 franchised stores were selected as Future Partners,</li>
+</ul>
 <p>13-2. 나머지 매장들은 현재 이미 폐업했거나 강제 폐업을 앞두고 있다.</p>
+<ul>
+	<li>and the rest of the stores have already closed or are to be forcefully closed soon.</li>
+</ul>
 <p>14-1. 매장 점주들은 아디다스코리아 측에 영업 종료 기한을 연장해 달라고 요청했지만</p>
+<ul>
+	<li>The owners of the stores had asked Adidas Korea for an extension of the shutdown deadline,</li>
+</ul>
 <p>14-2. 이 또한 거절당했다.</p>
+<ul>
+	<li>yet their request was also rejected.</li>
+</ul>
 <p>15-1. 국감에 증인으로 참석한 김정중 아디다스전국점주협의회 회장은</p>
+<ul>
+	<li>At the inspection, Kim Jeongjung, the head of the Council of Adidas Store Owners in Korea, participated as a witness,</li>
+</ul>
 <p>15-2. 108명의 아디다스 점주 중 현재 절반은 폐업을 했고 그 중 7명은 파산했다"고 증언했다.</p>
+<ul>
+	<li>and testified that "out of 108 Adidas store owners, half of them shut down their stores, and 7 went bankrupt".</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -189,10 +270,25 @@
 <h3>번역</h3>
 
 <p>16-1. 파산까지 할 정도로 점주들의 피해가 컸던 이유는</p>
+<ul>
+	<li>The reason why the damage was so severe that the owners went bankrupt</li>
+</ul>
 <p>16-2. 아디다스코리아가 2018년부터 4년여간 '다점포 정책'을 시행했기 때문이다.</p>
+<ul>
+	<li>was the "multi-store policy" which had been followed for 4 years since 2018 by Adidas Korea.</li>
+</ul>
 <p>17-1. 당시 근처에 다른 점포가 생기면</p>
+<ul>
+	<li>At that time, if another store opened nearby,</li>
+</ul>
 <p>17-2. 매출 감소로 이어질 것을 걱정한 점주들은</p>
+<ul>
+	<li>the owners, worried about possibly declining sales,</li>
+</ul>
 <p>17-3. 바뀐 정책에 따라 여러 매장을 혼자 운영해 왔다.</p>
+<ul>
+	<li>under the changed policy operated several stores by themselves.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -213,9 +309,21 @@
 <h3>번역</h3>
 
 <p>18-1. 2021년 아디다스 측은 1년 내 마트에 입점한 매장을 정리하라고 점주들에게 통보했고</p>
+<ul>
+	<li>In 2021, Adidas notified the store owners to close their shops in shopping malls within a year,</li>
+</ul>
 <p>18-2. 해당 매장 재고는 본인 소유의 다른 매장에서 처리하거나 반품 위약금을 내면 받아주겠다고 약속했다.</p>
+<ul>
+	<li>either moving the inventory from the closed store to another store owned by them, or paying a return fee and giving it back to Adidas.</li>
+</ul>
 <p>19-1. 약 30억대의 재고를 감당해야 했던 마트 매장 점주들은</p>
+<ul>
+	<li>The owners of the stores in shopping malls, who had to manage the inventory worth roughly 3 billion won,</li>
+</ul>
 <p>19-2. 위약금을 내고서라도 반품을 하려 했지만,</p>
+<ul>
+	<li>tried to pay the fee and return it.</li>
+</ul>
 <p>19-3. 아디다스코리아가 갑자기 반품도 못 받아주겠다며 말을 바꿔</p>
 <p>19-4. 막대한 재고 물량을 고스란히 떠안게 됐다.</p>
 
