--- a/uj/zajecia/24-25l/mkmb/class/8/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/8/index.html
@@ -15,9 +15,9 @@
 
 <h2>North Korea - "北, 러에 10대 초짜 파병...총알받이로 팔아넘긴 것"</h2>
 
-<!-- <div class="youtube"> -->
-	<!-- <object data="https://youtube.com/embed/gYETdg6sYtg" type="text/html">국정원 “北, 만 5천 명 파병…600명 숨져” / 채널A / 뉴스A</object> -->
-<!-- </div> -->
+<div class="youtube">
+	<object data="https://youtube.com/embed/gYETdg6sYtg" type="text/html">국정원 “北, 만 5천 명 파병…600명 숨져” / 채널A / 뉴스A</object>
+</div>
 
 <ul class="gallery">
 	<li><a href="uj/zajecia/24-25l/mkmb/class/8/img/김정은관북한군.jpg"><img src="uj/zajecia/24-25l/mkmb/class/8/img/김정은관북한군.jpg" alt="김정은관 북한군.jpg"></a></li>
@@ -50,12 +50,30 @@
 <h3>번역</h3>
 
 <p>0. "北, 러에 10대 초짜 파병...총알받이로 팔아넘긴 것"</p>
+<ul>
+	<li>“North Korea sold teenage, rookie troops to Russia as cannon fodder”</li>
+</ul>
 <p>1-1. 군 당국이 내린 평가에 의하면</p>
+<ul>
+	<li>According to assessments of South Korean military authorities,</li>
+</ul>
 <p>1-2. 러시아·우크라이나 전장에 투입되는 북한군 대부분은</p>
+<ul>
+	<li>the majority of the soldiers deployed to the Russia-Ukrainian battlefield</li>
+</ul>
 <p>1-3. 입영한 지 얼마 되지 않은 10~20대 ‘초짜’ 병력이다.</p>
+<ul>
+	<li>are rookie troops in their teens and twenties, who have just joined the army.</li>
+</ul>
 <p>2. 파병을 감행하면서도 손실을 최소화하려는 김정은 북한 국무위원장의 속셈으로 보인다.</p>
+<ul>
+	<li>This appears to be a calculation of the North Korean leader Kim Jong Un in order to minimise losses while dispatching troops at the same time.</li>
+</ul>
 <p>3-1. 이른바 ‘고기 분쇄기’로 불리는 러시아식 인해전술에</p>
 <p>3-2. 상당수 청소년인 이들이 결국 희생양이 될 수 있다는 우려가 크다.</p>
+<ul>
+	<li>There is a great concern that the vast majority of them would eventually be sacrificed in Russian-style human wave tactics called “the meat grinder”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -89,12 +107,33 @@
 <h3>번역</h3>
 
 <p>4. 베테랑 병력은 빼놓고…미성년자 상당수 포함 가능성</p>
+<ul>
+	<li>Leaving out senior troops, likely including mostly minors</li>
+</ul>
 <p>5-1. 복수의 군 소식통에 따르면</p>
+<ul>
+	<li>According to multiple military sources,</li>
+</ul>
 <p>5-2. 국방정보본부는 현지에서 입수한 영상과 정보를 분석해 이 같은 중간 판단을 내놨다.</p>
+<ul>
+	<li>Defense Intelligence Agency has made a preliminary assessment after analysing videos and data obtained from the dispatch.</li>
+</ul>
 <p>6-1. 군 관계자는 “입영한 지 얼마 안 된 어린 군인들이 (러시아 파병에서) 주류를 구성한 병력 구조”라며</p>
+<ul>
+	<li>A military representative said that “young soldiers, who have just joined the army, form the majority of the troops dispatched to Russia”,</li>
+</ul>
 <p>6-2. “숙달된 베테랑 병력은 많지 않은 것으로 보고 있다”고 말했다.</p>
+<ul>
+	<li>and that “it seems like there aren’t many skilled soldiers among them”.</li>
+</ul>
 <p>7. 한·미는 현재까지 러시아로 이동한 북한 병력이 3000여명에 달한다고 밝혔다.</p>
+<ul>
+	<li>South Korea and the United States have revealed that about 3000 North Korean soldiers had reached Russia so far.</li>
+</ul>
 <p>8. 국정원은 파병 규모가 모두 1만여명에 달할 것으로 내다보고 있다.</p>
+<ul>
+	<li>National Intelligence Service predicts that the total number of troops is going to reach 10,000.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -115,9 +154,21 @@
 <h3>번역</h3>
 
 <p>9. 이들은 대부분 10대 후반에서 20대 초반으로 파악된다는 게 국방정보본부의 판단이다.</p>
+<ul>
+	<li>Defense Intelligence Agency believes that most of them range from late teens to early twenties.</li>
+</ul>
 <p>10-1. 북한군 징집이 17살부터 이뤄지는 점을 감안하면</p>
+<ul>
+	<li>Considering that conscription in North Korea begins at the age of 17,</li>
+</ul>
 <p>10-2. 한국에선 미성년자에 해당하는 2005~2007년생 청소년이 상당수 포함됐을 수 있다.</p>
+<ul>
+	<li>the vast majority of teenagers born between 2005 and 2007, who would be considered minors in South Korea, may have been included.</li>
+</ul>
 <p>11. 결과적으로 러시아로 향한 병력이 허울뿐인 특수부대일 가능성도 커진다.</p>
+<ul>
+	<li>For this reason, there is a high probability that the troops sent to Russia are special forces in name only.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -152,11 +203,29 @@
 <h3>번역</h3>
 
 <p>12. 김정은, 어린 주민 희생으로 갖가지 이득</p>
+<ul>
+	<li>Kim Jong Un's profits paid with young soldiers' sacrifice</li>
+</ul>
 <p>13. 군 안팎에선 김정은이 숙련된 병력의 희생을 최소화하려는 의도로 초짜 병력을 보냈다는 해석이 나온다.</p>
+<ul>
+	<li>Both inside and outside the South Korean military, it is interpreted that Kim Jong Un has sent rookie troops with intention of minimising the sacrifice of well-trained soldiers.</li>
+</ul>
 <p>14-1. 러시아와 밀착 행보로 이득을 챙기는 와중에</p>
+<ul>
+	<li>While making profit from his close ties with Russia,</li>
+</ul>
 <p>14-2. 북한군 본진의 전력 유지도 고려할 수밖에 없었던 것 아니냐는 의미다.</p>
+<ul>
+	<li>he also had to take into account maintaining the army strength inside North Korea.</li>
+</ul>
 <p>15. 국가정보원은 러시아의 북한군 파병 대가가 1인당 월 2000달러(약 277만원) 수준이라고 추정한다.</p>
+<ul>
+	<li>National Intelligence Service estimates that Russia pays 2,000 USD (about 2.77 million South Korean won) per soldier each month.</li>
+</ul>
 <p>16. 북한이 러시아로부터 위성이나 핵잠수함, 첨단 무기 기술을 이전받을 가능성도 있다.</p>
+<ul>
+	<li>It is also possible that North Korea is going to receive satellites, nuclear submarines, and other advanced military technology from Russia.</li>
+</ul>
 
 <h3>어휘</h3>
 
