--- a/uj/index.html
+++ b/uj/index.html
@@ -19,7 +19,7 @@
 	Uniwersytet Jagielloński w Krakowie<br>
 	<hr>
 	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
-	konsultacje: środa 15.00–16.00, pokój -1.15<br>
+	konsultacje: piątek 13.00–14.00, pokój -1.15<br>
 </address>
 
 <h2>Zajęcia</h2>
