--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -133,7 +133,7 @@
 				<th rowspan="2" scope="row">7</th>
 				<td rowspan="2">2025년 11월 26일</td>
 				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3">시험지 3</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
