--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -204,7 +204,7 @@
 				<th scope="row">12</th>
 				<td>4 June 2025</td>
 				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/11"></a></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/11">discrimination of foreigners in South Korea</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="4">13</th>
